--- a/BlazeChameleon.csproj
+++ b/BlazeChameleon.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Facepunch.Steamworks.Posix">
-      <HintPath>C:\Users\Gentle\Desktop\New folder (9)\netstandard2.0\Facepunch.Steamworks.Posix.dll</HintPath>
+    <Reference Include="Facepunch.Steamworks.Win64">
+      <HintPath>Facepunch.Steamworks\Facepunch.Steamworks.Win64.dll</HintPath>
     </Reference>
   </ItemGroup>
 
